@@ -35,17 +35,10 @@ ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'wi
 
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
-// NetBeans will automatically add "run" and "debug" tasks relying on the
-// "mainClass" property. You may however define the property prior executing
-// tasks by passing a "-PmainClass=<QUALIFIED_CLASS_NAME>" argument.
-//
-// Note however, that you may define your own "run" and "debug" task if you
-// prefer. In this case NetBeans will not add these tasks but you may rely on
-// your own implementation.
-if (!hasProperty('mainClass')) {
-    ext.mainClass = 'tf.helper.test.TestWebView'
+// TFE, 20251224: Updates for Java25 and Gradle 9
+application {
+    mainClass.set('tf.helper.test.TestWebView')
 }
-mainClassName = 'tf.helper.test.TestWebView'
 def appName='JavaHelper'
 group='tf.JavaHelper'
 version='1.17'
@@ -73,7 +66,8 @@ dependencies {
 //    def javafx_version='17.0.1'
 //    def javafx_version='19.0.2'
 //    def javafx_version='21.0.2'
-    def javafx_version='23.0.1'
+//    def javafx_version='23.0.1'
+    def javafx_version='25.0.1'
     implementation "org.openjfx:javafx-base:$javafx_version:$platform"
     implementation "org.openjfx:javafx-graphics:$javafx_version:$platform"
     implementation "org.openjfx:javafx-controls:$javafx_version:$platform"
@@ -129,6 +123,10 @@ def newArgs = [ '--add-modules', 'javafx.controls,javafx.graphics,javafx.base,ja
                 '--add-exports', 'javafx.media/com.sun.media.jfxmedia=ALL-UNNAMED',
                 '--add-exports', 'javafx.media/com.sun.media.jfxmedia.events=ALL-UNNAMED',
                 '--add-opens', 'javafx.graphics/javafx.scene.layout=ALL-UNNAMED',
+                // TFE, 20251224: Updates for Java25 and Gradle 9
+                '--enable-native-access', 'javafx.graphics',
+                '--enable-native-access', 'javafx.web',
+                '--enable-native-access', 'javafx.media',
     ]
     
 // extend Netbeans Gradle "Run" task
